--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'com.github.santalu:mask-edittext:1.0.2'
     
     //Animation
     implementation "com.andkulikov:transitionseverywhere:1.8.1"
